@@ -9,6 +9,7 @@ import de.cubbossa.pathfinder.core.node.Navigable;
 import de.cubbossa.pathfinder.core.node.Node;
 import de.cubbossa.pathfinder.core.node.NodeGroupHandler;
 import de.cubbossa.pathfinder.core.node.implementation.PlayerNode;
+import de.cubbossa.pathfinder.core.node.implementation.Waypoint;
 import de.cubbossa.pathfinder.core.roadmap.RoadMap;
 import de.cubbossa.pathfinder.core.roadmap.RoadMapHandler;
 import de.cubbossa.pathfinder.module.visualizing.events.PathStartEvent;
@@ -89,6 +90,36 @@ public class FindModule implements Listener {
     return activePaths.get(player.getUniqueId());
   }
 
+  public NavigateResult findPath(Player player, Location location, double maxDist) {
+    Collection<Node> nodes = RoadMapHandler.getInstance().getRoadMapsStream()
+        .map(RoadMap::getNodes)
+        .flatMap(Collection::stream)
+        .toList();
+
+    Node closest = null;
+    double dist = Double.MAX_VALUE;
+    for (Node node : nodes) {
+      double curDist = node.getLocation().distance(location);
+      if (curDist < dist && curDist < maxDist) {
+        closest = node;
+        dist = curDist;
+      }
+    }
+    if (closest == null) {
+      return NavigateResult.FAIL_TOO_FAR_AWAY;
+    }
+    RoadMap roadMap = RoadMapHandler.getInstance().getRoadMap(closest.getRoadMapKey());
+    Waypoint target = roadMap.createNode(RoadMapHandler.WAYPOINT_TYPE, location, false);
+    roadMap.connectNodes(closest, target, false);
+
+    NavigateResult result = findPath(player, new NodeSelection(target));
+
+    roadMap.disconnectNodes(closest, target);
+    roadMap.removeNodes(target);
+
+    return result;
+  }
+
   public NavigateResult findPath(Player player, NodeSelection targets) {
     return findPath(player, targets, RoadMapHandler.getInstance().getRoadMaps().values());
   }
@@ -104,8 +135,7 @@ public class FindModule implements Listener {
         .map(Node::getRoadMapKey)
         .distinct()
         .map(key -> RoadMapHandler.getInstance().getRoadMap(key))
-        .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .filter(Objects::nonNull).toList();
 
     if (nodes.size() == 0) {
       return NavigateResult.FAIL_EMPTY;
@@ -221,8 +251,19 @@ public class FindModule implements Listener {
     });
   }
 
+  public static void printResult(FindModule.NavigateResult result, Player player) {
+    switch (result) {
+      case SUCCESS ->
+          TranslationHandler.getInstance().sendMessage(Messages.CMD_FIND, player);
+      case FAIL_BLOCKED ->
+          TranslationHandler.getInstance().sendMessage(Messages.CMD_FIND_BLOCKED, player);
+      case FAIL_EMPTY ->
+          TranslationHandler.getInstance().sendMessage(Messages.CMD_FIND_EMPTY, player);
+    }
+  }
+
   public enum NavigateResult {
-    SUCCESS, FAIL_NO_VISUALIZER_SELECTED, FAIL_BLOCKED, FAIL_EMPTY, FAIL_EVENT_CANCELLED
+    SUCCESS, FAIL_NO_VISUALIZER_SELECTED, FAIL_BLOCKED, FAIL_EMPTY, FAIL_EVENT_CANCELLED, FAIL_TOO_FAR_AWAY;
   }
 
   public record NavigationRequestContext(UUID playerId, Navigable navigable) {
